# tyuiu-schools-metrics-service

./: .env  Dockerfile  db.sqlite3  main.py  pyproject.toml  requirements.txt  test.py
data/: note.py  test.py
migrations/: env.py
migrations/versions/: 2024_12_10_0111-9ed1ac58a4b0_initial_revision.py  2024_12_10_2007-0d8c6145ea2b_initional_migration.py  2024_12_11_1841-fd814f873a08_initial_revision.py  2024_12_12_0114-66b9f2cf64c3_initial_revision.py  2024_12_12_0200-5c6a41077e5f_applicant_bdate_update.py  2024_12_13_1443-8fa995791763_initial_revision.py  2024_12_15_1731-1efa62c34eb0_initial_revision.py
src/: config.py  utils.py
src/analytics/: __init__.py  schools.py
src/analytics/schemas/: __init__.py  schools.py
src/api_v1/: app.py  lifespan.py
src/api_v1/middlewares/: globals.py
src/api_v1/routers/: __init__.py  applicant.py  metrics.py  school.py
src/api_v1/schemas/: __init__.py  applicant.py  direction.py  metrics.py  school.py  search.py
src/database/: analytics.py  base.py  context.py  crud.py  metrics.py  options.py
src/database/metrics/: direction.py  school.py
src/database/models/: __init__.py  applicant.py  direction.py  metric.py  mixins.py  personal.py  profile.py  school.py
src/database/services/: applicant.py  direction.py  school.py
src/metrics/: school.py  school_metrics.py  utils.py
src/metrics/info/: school.py
src/search/: client.py  loader.py  service.py
src/search_system/: client.py  options.py
src/utils/: encoder.py  funcs.py
