[tool.poetry]
name = "schoolsmetricsservice"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
aiosqlite = "^0.20.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
asyncpg = "^0.30.0"
cython = "^3.0.11"
elasticsearch = {extras = ["async"], version = "^8.16.0"}
accessify = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
